tests/NormalTests/paczka1/fuzzy1/21398892.err
Error in line 1: 8lBbC S800 72,46
Error in line 3: TaKBYBQ S800 54,6
Error in line 35: zEZA S287 13,9
